--- a/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/RealTimeHR.csproj
+++ b/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/RealTimeHR.csproj
@@ -34,6 +34,10 @@
     <AndroidLinkMode>None</AndroidLinkMode>
     <ConsolePause>False</ConsolePause>
     <EmbedAssembliesIntoApk>False</EmbedAssembliesIntoApk>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -53,10 +57,16 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HeartRateService.cs" />
-    <Compile Include="MainActivity.cs" />
+    <Compile Include="BackgroundSettingFragment.cs" />
+    <Compile Include="Helper\HeartRateHelper.cs" />
+    <Compile Include="Helper\RecordHelper.cs" />
+    <Compile Include="HRChartFragment.cs" />
+    <Compile Include="MonitoringService.cs" />
+    <Compile Include="RealTimeMeasureFragment.cs" />
+    <Compile Include="MainViewPagerActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SplashActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\lottie\heartbeat.json" />
@@ -68,7 +78,7 @@
     <AndroidResource Include="Resources\values\strings.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\MainMonitorLayout.xml" />
+    <AndroidResource Include="Resources\layout\RealTimeMeasureLayout.xml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher.png" />
@@ -88,18 +98,44 @@
   <ItemGroup>
     <AndroidResource Include="Resources\values-round\strings.xml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\BackgroundSettingLayout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Com.Airbnb.Android.Lottie">
       <Version>3.7.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.Arch.Core.Runtime">
+      <Version>2.1.0.8</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.PercentLayout" Version="1.0.0.8" />
     <PackageReference Include="Xamarin.AndroidX.Legacy.Support.Core.UI" Version="1.0.0.8" />
+    <PackageReference Include="Xamarin.AndroidX.ViewPager2">
+      <Version>1.0.0.9</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Wear" Version="1.1.0.2" />
     <PackageReference Include="Xamarin.Android.Wear" Version="2.2.0" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\button_shape.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\MainViewPagerLayout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\HRChartLayout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\splash.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\styles.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
