--- a/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/RealTimeHR.csproj
+++ b/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/RealTimeHR.csproj
@@ -62,7 +62,9 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BackgroundSettingFragment.cs" />
+    <Compile Include="HRRecordListFragment.cs" />
+    <Compile Include="MonitoringSettingActivity.cs" />
+    <Compile Include="MonitoringToggleFragment.cs" />
     <Compile Include="Helper\HeartRateHelper.cs" />
     <Compile Include="Helper\RecordHelper.cs" />
     <Compile Include="Helper\WorkerHelper.cs" />
@@ -74,6 +76,7 @@
     <Compile Include="MainViewPagerActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingConstants.cs" />
     <Compile Include="SplashActivity.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -107,7 +110,7 @@
     <AndroidResource Include="Resources\values-round\strings.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\BackgroundSettingLayout.xml">
+    <AndroidResource Include="Resources\layout\MonitoringToggleLayout.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
@@ -118,6 +121,9 @@
     <PackageReference Include="Xamarin.AndroidX.Arch.Core.Runtime">
       <Version>2.1.0.8</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.CardView">
+      <Version>1.0.0.8</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.PercentLayout" Version="1.0.0.8" />
     <PackageReference Include="Xamarin.AndroidX.Legacy.Support.Core.UI" Version="1.0.0.8" />
     <PackageReference Include="Xamarin.AndroidX.ViewPager2">
@@ -127,6 +133,9 @@
     <PackageReference Include="Xamarin.Android.Wear" Version="2.2.0" />
     <PackageReference Include="Xamarin.AndroidX.Work.Runtime">
       <Version>2.5.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.7.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -150,6 +159,26 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\SplashLayout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\MonitoringTimeSettingLayout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\HRRecordListLayout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\HRRecordItemLayout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\ListHeaderLayout.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
