--- a/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/RealTimeHR.csproj
+++ b/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/RealTimeHR.csproj
@@ -62,16 +62,17 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GoogleFitAccessFragment.cs" />
     <Compile Include="HRRecordListFragment.cs" />
+    <Compile Include="Helper\MonitoringHelper.cs" />
+    <Compile Include="MonitoringBroadcastReceiver.cs" />
     <Compile Include="MonitoringSettingActivity.cs" />
     <Compile Include="MonitoringToggleFragment.cs" />
     <Compile Include="Helper\HeartRateHelper.cs" />
     <Compile Include="Helper\RecordHelper.cs" />
     <Compile Include="Helper\WorkerHelper.cs" />
     <Compile Include="HRChartFragment.cs" />
-    <Compile Include="Model\Monitoring.cs" />
     <Compile Include="MonitoringService.cs" />
-    <Compile Include="MonitoringWork.cs" />
     <Compile Include="RealTimeMeasureFragment.cs" />
     <Compile Include="MainViewPagerActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
@@ -137,6 +138,12 @@
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.7.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.GooglePlayServices.Auth">
+      <Version>119.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.GooglePlayServices.Fitness">
+      <Version>120.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\button_shape.xml" />
@@ -181,6 +188,14 @@
     <AndroidResource Include="Resources\layout\ListHeaderLayout.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\GoogleFitAccessLayout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
