--- a/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/Properties/AndroidManifest.xml
+++ b/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/Properties/AndroidManifest.xml
@@ -8,6 +8,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:supportsRtl="true" android:theme="@android:style/Theme.DeviceDefault">
 		<uses-library android:name="com.google.android.wearable" android:required="true" />
 		<!--
