--- a/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/Properties/AndroidManifest.xml
+++ b/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/Properties/AndroidManifest.xml
@@ -16,5 +16,6 @@
       app to run.
     -->
 		<meta-data android:name="com.google.android.wearable.standalone" android:value="true" />
+    <activity android:name="androidx.wear.activity.ConfirmationActivity" />
 	</application>
 </manifest>
