--- a/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/RealTimeHR.csproj
+++ b/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/RealTimeHR.csproj
@@ -38,7 +38,11 @@
     <EnableLLVM>false</EnableLLVM>
     <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
     <BundleAssemblies>false</BundleAssemblies>
-    <AndroidKeyStore>false</AndroidKeyStore>
+    <AndroidKeyStore>true</AndroidKeyStore>
+    <AndroidSigningKeyStore>C:\Users\URK96\AppData\Local\Xamarin\Mono for Android\Keystore\RealTimeHR\RealTimeHR.keystore</AndroidSigningKeyStore>
+    <AndroidSigningStorePass>urk13301512</AndroidSigningStorePass>
+    <AndroidSigningKeyAlias>RealTimeHR</AndroidSigningKeyAlias>
+    <AndroidSigningKeyPass>urk13301512</AndroidSigningKeyPass>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -151,20 +155,20 @@
       <Version>3.7.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Arch.Core.Runtime">
-      <Version>2.1.0.8</Version>
+      <Version>2.1.0.9</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.CardView">
-      <Version>1.0.0.8</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.PercentLayout" Version="1.0.0.8" />
-    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.Core.UI" Version="1.0.0.8" />
-    <PackageReference Include="Xamarin.AndroidX.ViewPager2">
       <Version>1.0.0.9</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.Wear" Version="1.1.0.2" />
+    <PackageReference Include="Xamarin.AndroidX.PercentLayout" Version="1.0.0.9" />
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.Core.UI" Version="1.0.0.9" />
+    <PackageReference Include="Xamarin.AndroidX.ViewPager2">
+      <Version>1.0.0.10</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.Wear" Version="1.1.0.3" />
     <PackageReference Include="Xamarin.Android.Wear" Version="2.2.0" />
     <PackageReference Include="Xamarin.AndroidX.Work.Runtime">
-      <Version>2.5.0.2</Version>
+      <Version>2.5.0.3</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.7.0</Version>
