--- a/src/RealTimeHR/RealTimeHR/RealTimeHR/RealTimeHR.csproj
+++ b/src/RealTimeHR/RealTimeHR/RealTimeHR/RealTimeHR.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{DB34F4BA-3AE0-402D-B048-CFC871C25D93}</ProjectGuid>
+    <ProjectGuid>{5FED3600-1304-4CB5-9E37-6DAE154BE431}</ProjectGuid>
     <TemplateGuid>{0af826e4-e8b7-435f-b02e-4101b634e385}</TemplateGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>RealTimeHR</RootNamespace>
@@ -18,7 +18,7 @@
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <IsAppExtension>true</IsAppExtension>
-    <TargetFrameworkVersion>v11.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v12.0</TargetFrameworkVersion>
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
     <AndroidUseAapt2>true</AndroidUseAapt2>
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
@@ -38,11 +38,6 @@
     <EnableLLVM>false</EnableLLVM>
     <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
     <BundleAssemblies>false</BundleAssemblies>
-    <AndroidKeyStore>true</AndroidKeyStore>
-    <AndroidSigningKeyStore>C:\Users\URK96\AppData\Local\Xamarin\Mono for Android\Keystore\RealTimeHR\RealTimeHR.keystore</AndroidSigningKeyStore>
-    <AndroidSigningStorePass>urk13301512</AndroidSigningStorePass>
-    <AndroidSigningKeyAlias>RealTimeHR</AndroidSigningKeyAlias>
-    <AndroidSigningKeyPass>urk13301512</AndroidSigningKeyPass>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -54,38 +49,6 @@
     <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
     <ConsolePause>False</ConsolePause>
     <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
-    <AotAssemblies>false</AotAssemblies>
-    <EnableLLVM>false</EnableLLVM>
-    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
-    <BundleAssemblies>false</BundleAssemblies>
-    <AndroidSupportedAbis>
-    </AndroidSupportedAbis>
-    <AndroidKeyStore>true</AndroidKeyStore>
-    <AndroidSigningKeyStore>C:\Users\URK96\AppData\Local\Xamarin\Mono for Android\Keystore\RealTimeHR\RealTimeHR.keystore</AndroidSigningKeyStore>
-    <AndroidSigningStorePass>urk13301512</AndroidSigningStorePass>
-    <AndroidSigningKeyPass>urk13301512</AndroidSigningKeyPass>
-    <AndroidSigningKeyAlias>RealTimeHR</AndroidSigningKeyAlias>
-    <AndroidLinkMode>SdkOnly</AndroidLinkMode>
-    <AndroidCreatePackagePerAbi>false</AndroidCreatePackagePerAbi>
-    <AndroidPackageFormat>apk</AndroidPackageFormat>
-    <AndroidUseAapt2>true</AndroidUseAapt2>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Publish|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Publish\</OutputPath>
-    <Optimize>true</Optimize>
-    <DebugType>portable</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <LangVersion>8.0</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <AotAssemblies>false</AotAssemblies>
-    <EnableLLVM>false</EnableLLVM>
-    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
-    <BundleAssemblies>false</BundleAssemblies>
-    <AndroidPackageFormat>aab</AndroidPackageFormat>
-    <AndroidUseAapt2>true</AndroidUseAapt2>
-    <AndroidCreatePackagePerAbi>false</AndroidCreatePackagePerAbi>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -98,18 +61,18 @@
     <Compile Include="GoogleFitAccessFragment.cs" />
     <Compile Include="Helper\GoogleFitHelper.cs" />
     <Compile Include="Helper\GoogleSignHelper.cs" />
-    <Compile Include="HRRecentRecordFragment.cs" />
-    <Compile Include="HRRecordListActivity.cs" />
-    <Compile Include="Helper\MonitoringHelper.cs" />
-    <Compile Include="MonitoringBroadcastReceiver.cs" />
-    <Compile Include="MonitoringSettingActivity.cs" />
-    <Compile Include="MonitoringToggleFragment.cs" />
     <Compile Include="Helper\HeartRateHelper.cs" />
+    <Compile Include="Helper\MonitoringHelper.cs" />
     <Compile Include="Helper\RecordHelper.cs" />
     <Compile Include="HRChartFragment.cs" />
-    <Compile Include="MonitoringService.cs" />
-    <Compile Include="RealTimeMeasureFragment.cs" />
+    <Compile Include="HRRecentRecordFragment.cs" />
+    <Compile Include="HRRecordListActivity.cs" />
     <Compile Include="MainViewPagerActivity.cs" />
+    <Compile Include="MonitoringBroadcastReceiver.cs" />
+    <Compile Include="MonitoringService.cs" />
+    <Compile Include="MonitoringSettingActivity.cs" />
+    <Compile Include="MonitoringToggleFragment.cs" />
+    <Compile Include="RealTimeMeasureFragment.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingConstants.cs" />
@@ -123,9 +86,6 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\strings.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\RealTimeMeasureLayout.xml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher.png" />
@@ -145,102 +105,71 @@
   <ItemGroup>
     <AndroidResource Include="Resources\values-round\strings.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\MonitoringToggleLayout.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <PackageReference Include="Com.Airbnb.Android.Lottie">
-      <Version>3.7.0</Version>
+      <Version>4.2.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.Arch.Core.Runtime">
-      <Version>2.1.0.9</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.CardView">
-      <Version>1.0.0.9</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.PercentLayout" Version="1.0.0.9" />
-    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.Core.UI" Version="1.0.0.9" />
+    <PackageReference Include="Xamarin.AndroidX.PercentLayout" Version="1.0.0.11" />
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.Core.UI" Version="1.0.0.11" />
     <PackageReference Include="Xamarin.AndroidX.ViewPager2">
-      <Version>1.0.0.10</Version>
+      <Version>1.0.0.12</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.Wear" Version="1.1.0.3" />
-    <PackageReference Include="Xamarin.Android.Wear" Version="2.2.0" />
-    <PackageReference Include="Xamarin.AndroidX.Work.Runtime">
-      <Version>2.5.0.3</Version>
-    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.Wear" Version="1.2.0.2" />
     <PackageReference Include="Xamarin.Essentials">
-      <Version>1.7.0</Version>
+      <Version>1.7.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.GooglePlayServices.Auth">
-      <Version>119.0.0</Version>
+      <Version>119.2.0.3</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.GooglePlayServices.Fitness">
-      <Version>120.0.0</Version>
+      <Version>120.0.0.3</Version>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\button_shape.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\MainViewPagerLayout.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\HRChartLayout.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\splash.xml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\styles.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\SplashLayout.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
+    <AndroidResource Include="Resources\layout\GoogleFitAccessLayout.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\MonitoringTimeSettingLayout.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
+    <AndroidResource Include="Resources\layout\GoogleFitAPITestLayout.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\HRRecordListLayout.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
+    <AndroidResource Include="Resources\layout\HRChartLayout.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\HRRecordItemLayout.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
+    <AndroidResource Include="Resources\layout\HRRecentRecordLayout.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\ListHeaderLayout.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
+    <AndroidResource Include="Resources\layout\HRRecordItemLayout.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\GoogleFitAccessLayout.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
+    <AndroidResource Include="Resources\layout\HRRecordListLayout.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Model\" />
+    <AndroidResource Include="Resources\layout\ListHeaderLayout.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\GoogleFitAPITestLayout.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
+    <AndroidResource Include="Resources\layout\MainViewPagerLayout.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\HRRecentRecordLayout.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
+    <AndroidResource Include="Resources\layout\MonitoringTimeSettingLayout.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\MonitoringToggleLayout.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\RealTimeMeasureLayout.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\SplashLayout.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\button_shape.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\splash.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
